--- a/style.css
+++ b/style.css
@@ -64,7 +64,33 @@
   border-radius: 50px;
   background-color: #e7332b;
 }
-
+@media (max-width: 768px) {
+  .header-list {
+    display: none;
+  }
+  .header-img {
+    margin-left: 12px;
+  }
+  .header-img img {
+    width: 9rem;
+  }
+  .header-thumbs {
+    height: 60px;
+    width: 60px;
+  }
+  .header-img-thumbs {
+    width: 40px;
+    height: 40px;
+  }
+  .header-enroll {
+    padding: 10px 25px;
+    top: 22px;
+  }
+  .header-card {
+    margin-left: 1rem;
+    margin-top: -1rem;
+  }
+}
 .hero {
   display: flex;
   gap: 1rem;
@@ -159,6 +185,82 @@
 .hero-text span a {
   font-size: 23px;
   color: #4ac150;
+}
+
+@media (max-width: 768px) {
+  .hero .lady-img {
+    margin-top: 10px;
+    width: 20rem;
+    height: 20rem;
+  }
+  .hero {
+    display: flex;
+    flex-direction: column;
+  }
+  .hero-body h3 {
+    font-size: 18px;
+    margin-left: -35px;
+  }
+  .hero-body h1 {
+    font-size: 29px;
+    width: 60%;
+    text-align: center;
+    padding-block: 10px;
+    color: #514949;
+    font-family: Georgia, "Times New Roman", Times, serif;
+    margin-left: 50px;
+  }
+  .hero-body .hero-line {
+    position: absolute;
+    right: 4rem;
+    width: 5rem;
+  }
+  .hero-body p {
+    margin-left: 18px;
+  }
+  .hero-body button {
+    margin-left: 6rem;
+  }
+  .hero-body .hero-wire {
+    height: 4rem;
+    top: 53rem;
+    left: 15rem;
+  }
+  .male-img {
+    display: none;
+  }
+  .sub-hero {
+    margin-top: 7rem;
+    margin-left: 10px;
+    display: flex;
+    flex-direction: column;
+  }
+  .hero-container {
+    width: 100%;
+  }
+  .hero-container p {
+    font-size: 20px;
+    color: #514949;
+    font-weight: 700;
+    text-align: center;
+  }
+  .hero-img {
+    margin-left: 5rem;
+  }
+  .hero-img img {
+    width: 10rem;
+    height: 10rem;
+  }
+  .hero-text {
+    width: 93%;
+  }
+  .hero-text p {
+    font-size: 23px;
+    color: #514949;
+    margin-left: -3rem;
+    text-align: center;
+    margin-bottom: 1rem;
+  }
 }
 .service {
   margin-top: 4rem;
@@ -260,7 +362,48 @@
   height: 60rem;
   background-color: hsl(328, 100%, 97%);
 }
-
+@media (max-width: 768px) {
+  .service {
+    margin-top: -3rem;
+  }
+  .service-header .img {
+    height: 4rem;
+    width: 4rem;
+    top: 89rem;
+    left: 40%;
+  }
+  .service-intro {
+    width: 90%;
+    margin-left: 10px;
+  }
+  .service-intro h2 {
+    font-size: 18px;
+  }
+  .service-intro p {
+    font-size: 25px;
+    color: #514949;
+  }
+  .service-img {
+    display: none;
+  }
+  .service-container {
+    display: flex;
+    flex-direction: column;
+    height: 175rem;
+  }
+  .service-container .service-card {
+    margin-left: 18px;
+    height: 26rem;
+    width: 20rem;
+  }
+  .service-container .service-card img {
+    margin-left: 12rem;
+  }
+  .service-container .service-card h2 {
+    font-size: 25px;
+    color: #514949;
+  }
+}
 .train {
   background-color: #e7332b;
   color: #fff;
@@ -333,11 +476,59 @@
   align-items: center;
 }
 
+@media (max-width: 768px) {
+  .train {
+    display: flex;
+    flex-direction: column;
+    height: 70rem;
+  }
+  .train-container {
+    width: 100%;
+    margin-top: 5px;
+  }
+  .train-info {
+    width: 90%;
+    margin-left: 15px;
+    margin-top: 2rem;
+  }
+  .train-info .img {
+    height: 3rem;
+    margin-left: 4rem;
+  }
+  .train-info h3 {
+    font-size: 18px;
+  }
+  .train-info h1 {
+    font-size: 30px;
+    padding-block: 10px;
+  }
+  .train-text {
+    margin-left: 10px;
+  }
+  .train-card {
+    padding: 5px 10px;
+    width: 10rem;
+  }
+  .train-box {
+    margin-left: 5px;
+  }
+  .train-card img {
+    height: 40px;
+    width: 40px;
+  }
+  .train-img {
+    margin-left: 5px;
+  }
+  .train-img img {
+    height: 18rem;
+    width: 20rem;
+  }
+}
 .program {
   margin-top: 3rem;
   border-bottom: 1px solid #514949;
-  width: 95%;
-  margin-left: 2rem;
+  width: 100%;
+  background-color: hsl(328, 100%, 97%);
   height: 84rem;
 }
 .program-info {
@@ -359,7 +550,6 @@
   font-weight: 800;
 }
 .program-box {
-  background-color: hsl(328, 100%, 97%);
   display: grid;
   grid-template-columns: repeat(3, 1fr);
 
@@ -371,8 +561,8 @@
   background-color: hsl(0, 14%, 98%);
   box-shadow: 0 6px 24px hsla(0, 0%, 0%, 0.05);
   border-radius: 20px;
-  margin-left: 1rem;
-  margin-top: 3rem;
+  margin-left: 3.5rem;
+  margin-top: 2rem;
 }
 .program-card h2 {
   font-size: 23px;
@@ -382,9 +572,6 @@
 }
 .program-card figure {
   margin-top: 2rem;
-  display: flex;
-  gap: 1rem;
-  margin-left: 2rem;
 }
 .program-card p {
   font-size: 18px;
@@ -406,6 +593,45 @@
   border-radius: 38px;
   margin-left: 45%;
   margin-top: 3rem;
+}
+@media (max-width: 768px) {
+  .program {
+    height: 180rem;
+  }
+  .program-info {
+    width: 90%;
+    margin-left: 2px;
+  }
+  .program-info h1 {
+    font-size: 20px;
+  }
+  .program-info p {
+    font-size: 25px;
+    color: #514949;
+    line-height: 25px;
+    padding-block: 10px;
+  }
+  .program img {
+    margin-left: 20px;
+    width: 8rem;
+  }
+  .program-box {
+    display: flex;
+    flex-direction: column;
+    margin-left: -2rem;
+    height: 150rem;
+  }
+  .program-card figure {
+    display: flex;
+  }
+  .program-card {
+    width: 20rem;
+    height: 25rem;
+  }
+  .program button {
+    margin-left: 60px;
+    margin-top: 5rem;
+  }
 }
 .quest .img {
   height: 8rem;
